--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - chardet=3.0.4=py37_1003
   - cryptography=2.8=py37h72c5cf5_1
   - cymem=2.0.3=py37he1b5a44_0
+  - cython-blis=0.2.4=py37h516909a_1
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.0=he983fc9_1
   - gettext=0.19.8.1=hc5be6a0_1002
@@ -47,12 +48,13 @@ dependencies:
   - murmurhash=1.0.0=py37he1b5a44_0
   - ncurses=6.1=hf484d3e_1002
   - numpy=1.18.1=py37h95a1406_0
-  - openssl=1.1.1d=h516909a_0
+  - openssl=1.1.1e=h516909a_0
   - pandas=1.0.1=py37h0573a6f_0
   - pcre=8.44=he1b5a44_0
   - pip=20.0.2=py_2
   - pixman=0.38.0=h516909a_1003
   - plac=0.9.6=py_1
+  - preshed=2.0.1=py37he1b5a44_0
   - pthread-stubs=0.4=h14c3975_1001
   - pycairo=1.19.1=py37h438ddbb_0
   - pycparser=2.20=py_0
@@ -70,9 +72,11 @@ dependencies:
   - scipy=1.4.1=py37habc2bb6_0
   - setuptools=46.0.0=py37hc8dfbb8_2
   - six=1.14.0=py_1
+  - spacy=2.1.8=py37hc9558a2_0
   - sqlite=3.30.1=hcee41ef_0
   - srsly=1.0.0=py37he1b5a44_0
   - texttable=1.6.2=py_0
+  - thinc=7.0.8=py37hc9558a2_0
   - tk=8.6.10=hed695b0_0
   - tqdm=4.43.0=py_0
   - urllib3=1.25.7=py37_0
@@ -93,68 +97,6 @@ dependencies:
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h516909a_1006
   - pip:
-    - alabaster==0.7.12
-    - allennlp==0.9.0
-    - babel==2.8.0
-    - blis==0.2.4
-    - boto3==1.12.19
-    - botocore==1.15.19
-    - click==7.1.1
-    - conllu==1.3.1
-    - cycler==0.10.0
-    - docutils==0.16
-    - editdistance==0.5.3
     - en-core-web-sm==2.1.0
-    - flaky==3.6.1
-    - flask==1.1.1
-    - flask-cors==3.0.8
-    - ftfy==5.7
-    - gevent==1.4.0
-    - greenlet==0.4.15
-    - imagesize==1.2.0
-    - itsdangerous==1.1.0
-    - jinja2==2.11.1
-    - jmespath==0.9.5
-    - jsonnet==0.15.0
-    - jsonpickle==1.3
-    - kiwisolver==1.1.0
-    - markupsafe==1.1.1
-    - matplotlib==3.2.0
-    - more-itertools==8.2.0
-    - nltk==3.4.5
-    - numpydoc==0.9.2
-    - overrides==2.8.0
-    - packaging==20.3
-    - parsimonious==0.8.1
-    - pluggy==0.13.1
-    - preshed==2.0.1
-    - protobuf==3.11.3
-    - py==1.8.1
-    - pygments==2.6.1
-    - pyparsing==2.4.6
-    - pytest==5.4.0
-    - pytorch-pretrained-bert==0.6.2
-    - pytorch-transformers==1.1.0
-    - regex==2020.2.20
-    - responses==0.10.12
-    - s3transfer==0.3.3
-    - sentencepiece==0.1.85
-    - snowballstemmer==2.0.0
-    - spacy==2.1.9
-    - sphinx==2.4.4
-    - sphinxcontrib-applehelp==1.0.2
-    - sphinxcontrib-devhelp==1.0.2
-    - sphinxcontrib-htmlhelp==1.0.3
-    - sphinxcontrib-jsmath==1.0.1
-    - sphinxcontrib-qthelp==1.0.3
-    - sphinxcontrib-serializinghtml==1.1.4
-    - sqlparse==0.3.1
-    - tensorboardx==2.0
-    - thinc==7.0.8
-    - torch==1.4.0
-    - unidecode==1.1.1
-    - wcwidth==0.1.8
-    - werkzeug==1.0.0
-    - word2number==1.1
-prefix: /home/dialcrowd/anaconda3/envs/ethics_project
+prefix: /home/felixlabelle3/anaconda3/envs/ethics_project
 
